# Thruflux-C-

./: .gitignore  CMakeLists.txt  install_linux.sh  install_macos.sh  install_windows.ps1  vcpkg-configuration.json  vcpkg.json  zcc  zcxx
.github/workflows/: release.yml
app/: Main.cpp
common/: Contexts.hpp  IceHandler.hpp  Metrics.hpp  Payloads.hpp  Stream.hpp  TTLCache.hpp  ThreadManager.hpp  Types.hpp  Utils.hpp  Worker.hpp
dependency-overlay/liblsquic/: portfile.cmake
dependency-overlay/libnice/: portfile.cmake  vcpkg.json
dependency-overlay/openssl/: vcpkg.json
receiver/: ReceiverConfig.hpp  ReceiverContexts.hpp  ReceiverEntryPoint.cpp  ReceiverEntryPoint.hpp  ReceiverSocketHandler.hpp  ReceiverStream.hpp
sender/: SenderConfig.hpp  SenderContexts.hpp  SenderEntryPoint.cpp  SenderEntryPoint.hpp  SenderFileHandler.hpp  SenderSocketHandler.hpp  SenderStateHolder.hpp  SenderStream.hpp
server/: ServerConfig.hpp  ServerEntryPoint.cpp  ServerEntryPoint.hpp  ServerSocketHandler.hpp  SessionTracker.hpp  TransferSession.hpp  TransferSessionStore.hpp
triplet-overlay/: x64-mingw-static-release.cmake
